--- a/app/src/styles/menu.css
+++ b/app/src/styles/menu.css
@@ -7,6 +7,8 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     overflow-y: scroll;
     background-color: #F4FDFF;
+    position: relative;
+    z-index: 1;
 }
 
 .nav-category{
@@ -28,4 +30,12 @@
         width: 500px;
         font-size: 10px;
     }
+    .basket-icon{
+      margin: 0;
+    }
+  }
+  .select-category-warning{
+    text-align: center;
+    margin-top:50px;
+    font-size: 30px;
   }
